force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/PBS_AAAP_AlternateDelineatedArea__c.object-meta.xml
<CustomObject>
    <label>Alternate Delineated Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternate Delineated Area</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>