force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/fields/DilneatedAreaType__c.field-meta.xml
<CustomField>
    <fullName>DilneatedAreaType__c</fullName>
    <label>DilneatedAreaType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>