force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/fields/PBS_AAAP_EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EXTERNAL_ID__c</fullName>
    <description>External Key for upsert uses row number from ETL</description>
    <externalId>true</externalId>
    <label>PBS_AAAP_EXTERNAL_ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>