force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>