force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DilneatedAreaType__c</columns>
    <columns>State__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Value__c</columns>
    <columns>PBS_AAAP_EXTERNAL_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DilneatedAreaType__c</field>
        <operation>equals</operation>
        <value>City</value>
    </filters>
    <label>All</label>
</ListView>