force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>State__c</columns>
    <columns>Value__c</columns>
    <columns>DilneatedAreaType__c</columns>
    <columns>NAME</columns>
    <columns>PBS_AAAP_EXTERNAL_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>