force-app/main/default/objects/PBS_AAAP_AlternateDelineatedArea__c/listViews/Congressional_District.listView-meta.xml
<ListView>
    <fullName>Congressional_District</fullName>
    <columns>NAME</columns>
    <columns>DilneatedAreaType__c</columns>
    <columns>Value__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DilneatedAreaType__c</field>
        <operation>equals</operation>
        <value>Congressional District</value>
    </filters>
    <label>Congressional District</label>
</ListView>